--- a/web_qualiy.twig
+++ b/web_qualiy.twig
@@ -253,21 +253,14 @@
                 background-repeat: no-repeat;
                 background-position: top right;
             }
-            .OB {
-                background-image: url(http://ddata.over-blog.com/3/82/65/02/css-kiwi/seo/ob.png);
-            }
-            .TW {
-                background-image: url(http://ddata.over-blog.com/3/82/65/02/css-kiwi/seo/tw.png);
-            }
-            .FB {
-                background-image: url(http://ddata.over-blog.com/3/82/65/02/css-kiwi/seo/fb.png);
-            }
-            .IG {
-                background-image: url(http://ddata.over-blog.com/3/82/65/02/css-kiwi/seo/ig.png);
-            }
-            .FS {
-                background-image: url(http://ddata.over-blog.com/3/82/65/02/css-kiwi/seo/fs.png);
-            }
+            .FB {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-facebook.png");}
+            .TW {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-twitter.png");}
+            .IG {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-instagram.png");}
+            .FS {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-foursquare.png");}
+            .YT {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-youtube.png");}
+            .FL {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-flickr.png");}
+			.OB {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-overblog.png");}
+
             .meta {
                 color: #999;
             }
