--- a/web_qualiy.twig
+++ b/web_qualiy.twig
@@ -253,14 +253,13 @@
                 background-repeat: no-repeat;
                 background-position: top right;
             }
-            .FB {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-facebook.png");}
-            .TW {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-twitter.png");}
-            .IG {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-instagram.png");}
-            .FS {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-foursquare.png");}
-            .YT {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-youtube.png");}
-            .FL {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-flickr.png");}
-			.OB {background: url("http://assets.over-blog-kiwi.com/themes/13/images/social-overblog.png");}
-
+            .FB {background-image: url("http://assets.over-blog-kiwi.com/themes/13/images/social-facebook.png");}
+            .TW {background-image: url("http://assets.over-blog-kiwi.com/themes/13/images/social-twitter.png");}
+            .IG {background-image: url("http://assets.over-blog-kiwi.com/themes/13/images/social-instagram.png");}
+            .FS {background-image: url("http://assets.over-blog-kiwi.com/themes/13/images/social-foursquare.png");}
+            .YT {background-image: url("http://assets.over-blog-kiwi.com/themes/13/images/social-youtube.png");}
+            .FL {background-image: url("http://assets.over-blog-kiwi.com/themes/13/images/social-flickr.png");}
+			.OB {background-image: url("http://assets.over-blog-kiwi.com/themes/13/images/social-overblog.png");}
             .meta {
                 color: #999;
             }
