--- a/web_qualiy.twig
+++ b/web_qualiy.twig
@@ -90,32 +90,10 @@
             <link rel="next" href="{{ Navigation.NextPage }}"/>
         {% endif %}
 
-
-        <!-- jquery -->
-        <script src="http://assets.over-blog-kiwi.com/themes/14/js/jquery-1.7.1.min.js"></script>
-        <script src="http://assets.over-blog-kiwi.com/themes/14/js/modernizr.js"></script>
-
-        <!-- fancybox for pictures -->
-        <script src="http://assets.over-blog-kiwi.com/themes/1/js/fancybox/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="http://assets.over-blog-kiwi.com/themes/1/js/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
 
         <!-- snipper pour coloration syntaxique -->
         <link rel="stylesheet" type="text/css" href="http://ddata.over-blog.com/3/82/65/02/assets/jquery.snippet2.css" />
-
-        <script>
-          function switch_arch(year){
-            var targetElement;
-            targetElement = document.getElementById("arch_"+year) ;
-            if (targetElement.style.display == "none")
-            {
-              targetElement.style.display = "" ;
-            } else {
-              targetElement.style.display = "none" ;
-            }        
-            return false;
-          }
-        </script>
-
 
         <!-- includes -->
         <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ Blog.RssUrl }}" />
@@ -263,13 +241,6 @@
             .meta {
                 color: #999;
             }
-            .cover {
-                float: left;
-                padding: 10px 10px 0 0;
-            }
-            .summary {
-                margin: 3px 0;
-            }
             .pagination {
                 text-align : center;
             }
@@ -371,10 +342,6 @@
                 padding: 0;
                 list-style: none;
             }
-            .social .facebook {
-                background: url("http://assets.over-blog-kiwi.com/themes/1/images/social-fb.png") no-repeat scroll 0 3px transparent; 
-                padding-left: 40px;
-            }
             .social .twitter {
                 background: url("http://assets.over-blog-kiwi.com/themes/1/images/social-twitter.png") no-repeat scroll 0 3px transparent; 
                 padding-left: 40px;
@@ -422,6 +389,9 @@
                 height: 19px; 
                 padding: 5px 10px; 
                 width: 152px; 
+                background: #eec;
+                color: #333;
+                border: 1px solid white;
             }
 
             
@@ -445,11 +415,6 @@
             }
             .footer {
                 background: #cca;
-            }
-            .search input[type="text"] {
-                background: #eec;
-                color: #333;
-                border: 1px solid white;
             }
             .header h1 a {
                 color: #000066;
@@ -485,6 +450,23 @@
             }
             -->
         </style>
+
+
+
+        <!-- archive -->
+         <script>
+          function switch_arch(year){
+            var targetElement;
+            targetElement = document.getElementById("arch_"+year) ;
+            if (targetElement.style.display == "none")
+            {
+              targetElement.style.display = "" ;
+            } else {
+              targetElement.style.display = "none" ;
+            }
+            return false;
+          }
+        </script>
 
     </head>
     <body>
@@ -651,6 +633,13 @@
             </div>
         </div>
         {% endif %}
+
+        <!-- jquery -->
+        <script src="http://assets.over-blog-kiwi.com/themes/14/js/jquery-1.7.1.min.js"></script>
+        <script src="http://assets.over-blog-kiwi.com/themes/14/js/modernizr.js"></script>
+
+        <!-- fancybox for pictures -->
+        <script src="http://assets.over-blog-kiwi.com/themes/1/js/fancybox/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
 
         <!-- Google Analytics -->
         <script type="text/javascript">
