Fix ignoring file

--- a/series.twig
+++ b/series.twig
@@ -1153,8 +1153,8 @@
 								<img src="{{ Blog.Avatar|resize(65,65)|crop }}" alt="{{ Blog.Title }}" title="{{ Blog.Description }}" width="65" height="65" style="float: left; padding-right: 5px;" />
 							{% endif %}
 							<p style="">
-								Fan de sÃ©ries tÃ©lÃ©visÃ©es depuis des annÃ©es. J'ai une prÃ©fÃ©rence pour les sÃ©ries amÃ©ricaines et anglaises, mais je regarde aussi des sÃ©ries franÃ§aises.
-								<span class="author">SÃ©rie maniac</span>
+								Fan de séries télévisées depuis des années. J'ai une préférence pour les séries américaines et anglaises, mais je regarde aussi des séries françaises.
+								<span class="author">Série maniac</span>
 							</p>
               {% if Custom('display_widget_html') is not empty %}
                 {{ Custom('display_widget_html') }}
@@ -1243,8 +1243,8 @@
 
 			<footer id="blog-footer">
 				<p>{{ Lang.Get(Custom('footer_content'))|default('Theme: Twentyeleven &copy; 2012') }} - <span>{{ Lang.Get('Hosted by') }}</span> <a href="http://over-blog.com" target="_blank">Overblog</a>
-                                    - <a href="http://le-blog-des-series.overblog.com/" title="Annuaire des blogs de sÃ©ries TV">D'autres sÃ©ries TV</a>
-                                    - <a href="http://tous-les-episodes.overblog.com" title="Blog regroupant les rÃ©sumÃ©s de toutes les sÃ©ries TV">Tous les Ã©pisodes de sÃ©ries TV</a>
+                                    - <a href="http://le-blog-des-series.overblog.com/" title="Annuaire des blogs de séries TV">D'autres séries TV</a>
+                                    - <a href="http://tous-les-episodes.overblog.com" title="Blog regroupant les résumés de toutes les séries TV">Tous les épisodes de séries TV</a>
 				</p>
 			</footer>
 		</div>
@@ -1411,3 +1411,4 @@
 	    </script>
 	</body>
 </html>
+
