--- a/series.twig
+++ b/series.twig
@@ -1153,7 +1153,7 @@
                                                         <img src="{{ Blog.Avatar|resize(65,65)|crop }}" alt="{{ Blog.Title }}" title="{{ Blog.Description }}" width="65" height="65" style="float: left; padding-right: 5px;" />
                                                 {% endif %}
                                                 <p style="">
-                                                        Fan de séries télévisées depuis des années. J'ai une préférence pour les séries américaines et anglaises, mais je regarde aussi des séries franéaises.
+                                                        Fan de séries télévisées depuis des années. J'ai une préférence pour les séries américaines et anglaises, mais je regarde aussi des séries françaises.
                                                         <span class="author">Série maniac</span>
                                                 </p>
                                                 <p>
