Fix recherche dans mes themes

--- a/web_qualiy.twig
+++ b/web_qualiy.twig
@@ -468,7 +468,7 @@
             <!-- shortcut:[Header content] -->
             <div class="header">
                 <div class="search">
-                    <form class="search" method="post" action="/search/">
+                    <form class="search" method="post" action="/search">
                         <input type="text" name="q" placeholder="{{ Lang.Get('Search') }}..." value="{% if isSearch %}{{ Search }}{% endif %}" />
                     </form>
                     <img src="http://idata.over-blog.com/3/82/65/02/kiwi/qualite.png" alt="Logo Web qualité"/>
