--- a/toulouse_road.twig
+++ b/toulouse_road.twig
@@ -599,7 +599,7 @@
 						</h1>
 					</div>
 					<div class="search">
-						<form class="search" method="post" action="/search/">
+						<form class="search" method="post" action="/search">
 							<input type="text" name="q" placeholder="{{ Lang.Get('Search something here') }}..." value="" />
 						</form>
 					</div>
